--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="style.css">
 </head4
 <body>
-    <!-- <div class="loader">
+    <div class="loader">
         <h3>Experiences</h3>
         <h3>Environments</h3>
         <h3> Content</h3>
-    </div> -->
+    </div>
     <div id="fixed" class="over"></div>
     <div id="footer">
         <div class="golacon">
