--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div id="hero-2"></div>
                 <div id="hero-3"></div>
             </div>
-                <video loop autoplay muted src="https://download-video.akamaized.net/v3-1/playback/ea709ea7-d205-45c7-9919-b6484f30fa24/b7e94ef4?__token__=st=1722585395~exp=1722599795~acl=%2Fv3-1%2Fplayback%2Fea709ea7-d205-45c7-9919-b6484f30fa24%2Fb7e94ef4%2A~hmac=28f234058edf88e9146d164a5e72992467fb4245fba42930580e35bcbb98e447&r=dXMtZWFzdDE%3D"></video>
+                <video loop autoplay muted src=".\video.mp4"></video>
         </div>
         <div id="page-2">
             <div id="moving-text">
